--- a/index.html
+++ b/index.html
@@ -39,9 +39,10 @@
       </p>
       <div class="home-sci">
         <a href="#" target="”_blank”" style="--i: 7"><i class="bx bxl-whatsapp"></i></a>
-        <a href="#" target="”_blank”" style="--i: 8"><i class="bx bxl-instagram"></i></a>
-        <a href="#" target="”_blank”" style="--i: 9"><i class="bx bxl-telegram"></i></a>
-        <a href="#" target="”_blank”" style="--i: 10"><i class="bx bxl-github"></i></a>
+        <a href="https://www.instagram.com/ethan.phx/" target="”_blank”" style="--i: 8"><i
+            class="bx bxl-instagram"></i></a>
+        <a href="https://t.me/samehalpha" target="”_blank”" style="--i: 9"><i class="bx bxl-telegram"></i></a>
+        <a href="https://github.com/Samehv9" target="”_blank”" style="--i: 10"><i class="bx bxl-github"></i></a>
         <a href="https://web.facebook.com/kaisa.only.one/" target="”_blank”" style="--i: 11"><i
             class="bx bxl-facebook"></i></a>
       </div>
@@ -121,7 +122,7 @@
 
   <!-- -------------- START SKILLS ---------------------------- -->
   <h1 class="sub-title">My <span>Skills</span></h1>
-  <section>
+  <section class="section-skills">
     <div class="container1" id="skills">
       <h1 class="heading1">Technical Skills</h1>
       <div class="Technical-bars">
@@ -214,42 +215,37 @@
 
         <div class="portfolio-content">
           <div class="row">
-            <img src="img/sameh-ahmed-high-resolution-logo-white.png" alt="" />
+            <img src="img/UI-UX.jpg" alt="" />
             <div class="layer">
               <h5>UI/UX Design</h5>
               <p>
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt
-                ipsa culpa asperiores nobis facilis, necessitatibus quo in
-                totam est dolores reprehenderit rem quaerat qui doloribus
-                corporis alias. Quam, fuga quo.
+                Did multiple projects using (HTML, CSS) with smooth and lively styling.
               </p>
-              <a href="#"><i class="bx bx-link-external" style="color: aliceblue"></i></a>
+              <a href="https://samehv9.github.io/Order-card/" target="_blank"><i class="bx bx-link-external"
+                  style="color: aliceblue"></i></a>
             </div>
           </div>
           <div class="row">
-            <img src="img/sameh-ahmed-high-resolution-logo-white.png" alt="" />
+            <img src="img/New Bitmap Image.jpg" alt="" />
             <div class="layer">
-              <h5>UI/UX Design</h5>
+              <h5>JavaScript</h5>
               <p>
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt
-                ipsa culpa asperiores nobis facilis, necessitatibus quo in
-                totam est dolores reprehenderit rem quaerat qui doloribus
-                corporis alias. Quam, fuga quo.
+                Did multiple Projects that include (JavaScript) like (Password Generator, Count Board, Score Tool).
               </p>
-              <a href="#"><i class="bx bx-link-external" style="color: aliceblue"></i></a>
+              <a href="https://samehv9.github.io/PasswordGenerator/" target="_blank"><i class="bx bx-link-external"
+                  style="color: aliceblue"></i></a>
             </div>
           </div>
           <div class="row">
-            <img src="img/sameh-ahmed-high-resolution-logo-white.png" alt="" />
+            <img src="img/creativity.jpg" alt="" />
             <div class="layer">
-              <h5>UI/UX Design</h5>
+              <h5>Creativity</h5>
               <p>
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt
-                ipsa culpa asperiores nobis facilis, necessitatibus quo in
-                totam est dolores reprehenderit rem quaerat qui doloribus
-                corporis alias. Quam, fuga quo.
+                Did many sites without skitch related to the self-creativity that helps the client to get better
+                influence for his/her project.
               </p>
-              <a href="#"><i class="bx bx-link-external" style="color: aliceblue"></i></a>
+              <a href="https://samehv9.github.io/LoginForm/" target="”_blank”"><i class="bx bx-link-external"
+                  style="color: aliceblue"></i></a>
             </div>
           </div>
         </div>
@@ -266,30 +262,27 @@
       <h2>Contact <span>Me</span></h2>
       <h4>Let's Work Together</h4>
       <p>
-        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quia ex
-        omnis ipsum, debitis nam expedita, reiciendis itaque quod commodi
-        totam hic perspiciatis facilis assumenda eum placeat earum porro!
-        Laudantium, harum.
-      </p>
+        Fast and good quality projects for your company, Hit me with a message and leave the hard work for me.</p>
       <div class="contact-list">
-        <li><i class="bx bxs-send"></i> contact@gmail.com</li>
+        <li><i class="bx bxs-send"></i> sameh.av6@gmail.com</li>
         <li><i class="bx bxl-whatsapp"></i> (+20) 111 957 5034</li>
       </div>
       <div class="contact-icons">
         <a href="#" style="--i: 12" target="”_blank”"><i class="bx bxl-whatsapp"></i></a>
-        <a href="#" style="--i: 13" target="”_blank”"><i class="bx bxl-instagram"></i></a>
-        <a href="#" style="--i: 14" target="”_blank”"><i class="bx bxl-telegram"></i></a>
+        <a href="https://www.instagram.com/ethan.phx/" style="--i: 13" target="”_blank”"><i
+            class="bx bxl-instagram"></i></a>
+        <a href="https://t.me/samehalpha" style="--i: 14" target="”_blank”"><i class="bx bxl-telegram"></i></a>
         <a href="https://web.facebook.com/kaisa.only.one/" style="--i: 15" target="”_blank”"><i
             class="bx bxl-facebook"></i></a>
       </div>
     </div>
     <div class="contact-form">
       <form action="" method="POST">
-        <input type="" placeholder="Enter Your Name" id="name" required />
+        <!-- <input type="" placeholder="Enter Your Name" id="name" required />
         <input type="email" placeholder="Enter Your E-mail" id="email" required />
         <input type="" placeholder="Enter Your Subject" required id="subject" />
         <textarea name="" id="" cols="40" rows="10" placeholder="Enter Your Message" required id="message"></textarea>
-        <input type="submit" value="submit" class="send" onclick="sendMail()" />
+        <input type="submit" value="submit" class="send" onclick="sendMail()" /> -->
       </form>
     </div>
   </section>
