--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <title>Sameh Ahmed's portfolio</title>
   <link rel="stylesheet" href="style.css" />
   <link href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css" rel="stylesheet" />
+  <link rel="icon" href="img/sameh-ahmed-high-resolution-logo-transparent.png">
   <script src="https://unpkg.com/typed.js@2.1.0/dist/typed.umd.js"></script>
 </head>
 
@@ -277,13 +278,13 @@
       </div>
     </div>
     <div class="contact-form">
-      <form action="" method="POST">
-        <!-- <input type="" placeholder="Enter Your Name" id="name" required />
+      <!-- <form action="" method="POST">
+        <input type="text" placeholder="Enter Your Name" id="name" required />
         <input type="email" placeholder="Enter Your E-mail" id="email" required />
-        <input type="" placeholder="Enter Your Subject" required id="subject" />
+        <input type="text" placeholder="Enter Your Subject" required id="subject" />
         <textarea name="" id="" cols="40" rows="10" placeholder="Enter Your Message" required id="message"></textarea>
-        <input type="submit" value="submit" class="send" onclick="sendMail()" /> -->
-      </form>
+        <input type="submit" value="submit" class="send"/>
+      </form> -->
     </div>
   </section>
 
