--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
   <!-- -------------- START LINKS ---------------------------- -->
   <header class="header">
-    <a href="#" class="logo">Sameh Ahmed</a>
+    <a href="#" class="logo"><img src="img/sameh-ahmed-high-resolution-logo-cyan.png" alt=""></a>
 
     <nav class="navbar">
       <a href="#home" style="--i: 1" class="active">Home</a>
@@ -39,7 +39,7 @@
         is to create and website design, frontend design, and many more....
       </p>
       <div class="home-sci">
-        <a href="#" target="”_blank”" style="--i: 7"><i class="bx bxl-whatsapp"></i></a>
+        <a href="https://wa.me/+201119575034" target="”_blank”" style="--i: 7"><i class="bx bxl-whatsapp"></i></a>
         <a href="https://www.instagram.com/ethan.phx/" target="”_blank”" style="--i: 8"><i
             class="bx bxl-instagram"></i></a>
         <a href="https://t.me/samehalpha" target="”_blank”" style="--i: 9"><i class="bx bxl-telegram"></i></a>
@@ -83,23 +83,17 @@
         <div class="services-list">
           <div>
             <i class="bx bx-code" style="color: #00eeff"></i>
-            <h2>UI/UX Design</h2>
+            <h2>Resposive & Dynamic Websites</h2>
             <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo
-              autem incidunt voluptatum necessitatibus ipsa. Iusto
-              reprehenderit optio expedita mollitia enim perferendis aperiam.
-              Aliquid, dolore fuga? Assumenda dolor neque molestias. Illo.
+              Editing and creating responsive and animated websites using ( HTML, CSS ).
             </p>
             <a href="#" class="read">learn more</a>
           </div>
           <div>
             <i class="bx bx-crop" style="color: #00eeff"></i>
-            <h2>UI/UX Design</h2>
+            <h2>JavaScript Projects</h2>
             <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo
-              autem incidunt voluptatum necessitatibus ipsa. Iusto
-              reprehenderit optio expedita mollitia enim perferendis aperiam.
-              Aliquid, dolore fuga? Assumenda dolor neque molestias. Illo.
+              Capable of doing forms like (Password Generator - Count Board ) and such other projects using JavaScript.
             </p>
             <a href="#" class="read">learn more</a>
           </div>
@@ -107,10 +101,7 @@
             <i class="bx bxl-apple" style="color: #00eeff"></i>
             <h2>UI/UX Design</h2>
             <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo
-              autem incidunt voluptatum necessitatibus ipsa. Iusto
-              reprehenderit optio expedita mollitia enim perferendis aperiam.
-              Aliquid, dolore fuga? Assumenda dolor neque molestias. Illo.
+              Capable of creating good looking creative websites for who doesn't have specific sketch for their own business, Fixing and editing the style for who wants to make some changes on their old work websites.
             </p>
             <a href="#" class="read">learn more</a>
           </div>
@@ -269,7 +260,7 @@
         <li><i class="bx bxl-whatsapp"></i> (+20) 111 957 5034</li>
       </div>
       <div class="contact-icons">
-        <a href="#" style="--i: 12" target="”_blank”"><i class="bx bxl-whatsapp"></i></a>
+        <a href="https://wa.me/+201119575034" style="--i: 12" target="”_blank”"><i class="bx bxl-whatsapp"></i></a>
         <a href="https://www.instagram.com/ethan.phx/" style="--i: 13" target="”_blank”"><i
             class="bx bxl-instagram"></i></a>
         <a href="https://t.me/samehalpha" style="--i: 14" target="”_blank”"><i class="bx bxl-telegram"></i></a>
