--- a/index.html
+++ b/index.html
@@ -15,13 +15,19 @@
   <!-- -------------- START LINKS ---------------------------- -->
   <header class="header">
     <a href="#" class="logo"><img src="img/sameh-ahmed-high-resolution-logo-cyan.png" alt=""></a>
-
+    <!-- ------------------------TOGGLE BUTTON ----------------------------->
+    <input type="checkbox" id="check">
+    <label for="check" class="icons">
+      <i class='bx bx-menu-alt-right' id="menu-icon"></i>
+      <i class='bx bx-x-circle' id="close-icon"></i>
+    </label>
+        <!-- ------------------------TOGGLE BUTTON ----------------------------->
     <nav class="navbar">
-      <a href="#home" style="--i: 1" class="active">Home</a>
-      <a href="#about" style="--i: 2">About</a>
-      <a href="#services" style="--i: 3">Skills</a>
-      <a href="#skills" style="--i: 4">Portfolio</a>
-      <a href="#contact" style="--i: 5">Contact</a>
+      <a href="#home" style="--i:1" class="active">Home</a>
+      <a href="#about" style="--i:2">About</a>
+      <a href="#services" style="--i:3">Skills</a>
+      <a href="#skills" style="--i:4">Portfolio</a>
+      <a href="#contact" style="--i:5">Contact</a>
     </nav>
   </header>
 
@@ -36,7 +42,7 @@
       <h3>And I'm a <span class="text"></span></h3>
       <p>
         I'm a web Designer with experience for over 2 years. <br />expertise
-        is to create and website design, frontend design, and many more....
+        is to create and website design, front-end developer, and many more....
       </p>
       <div class="home-sci">
         <a href="https://wa.me/+201119575034" target="”_blank”" style="--i: 7"><i class="bx bxl-whatsapp"></i></a>
@@ -61,7 +67,7 @@
       <img src="img/sameh-ahmed-high-resolution-logo-transparent.png" alt="" />
     </div>
     <div class="about-text">
-      <h2>About<span>Me</span></h2>
+      <h2>About <span>Me</span></h2>
       <h4>Web Designer!</h4>
       <p>
         High level experience in web design and development knowledge,
@@ -285,7 +291,7 @@
 
   <div class="last-text">
     <img src="img/sameh-ahmed-high-resolution-logo-black-.png" alt="" />
-    <p>Developed by Sameh Ahmed &copy; 2023</p>
+    <p>Developed by <strong>Sameh Ahmed</strong> &copy; 2023</p>
   </div>
 
   <a href="#home" class="top"><i class="bx bx-up-arrow-alt"></i></a>
