--- a/index.html
+++ b/index.html
@@ -25,9 +25,10 @@
     <nav class="navbar">
       <a href="#home" style="--i:1" class="active">Home</a>
       <a href="#about" style="--i:2">About</a>
-      <a href="#services" style="--i:3">Skills</a>
-      <a href="#skills" style="--i:4">Portfolio</a>
-      <a href="#contact" style="--i:5">Contact</a>
+      <a href="#services" style="--i:3">Survices</a>
+      <a href="#skills" style="--i:4">Skills</a>
+      <a href="#project" style="--i:5">Projects</a>
+      <a href="#contact" style="--i:6">Contact</a>
     </nav>
   </header>
 
@@ -208,7 +209,7 @@
 
   <section>
     <div class="portfolio" id="project">
-      <div class="main-text" id="projec">
+      <div class="main-text" id="project">
         <h2>Latest <span>Project</span></h2>
 
         <div class="portfolio-content">
@@ -266,11 +267,11 @@
         <li><i class="bx bxl-whatsapp"></i> (+20) 111 957 5034</li>
       </div>
       <div class="contact-icons">
-        <a href="https://wa.me/+201119575034" style="--i: 12" target="”_blank”"><i class="bx bxl-whatsapp"></i></a>
+        <a href="https://wa.me/+201119575034" style="--i:12" target="”_blank”"><i class="bx bxl-whatsapp"></i></a>
         <a href="https://www.instagram.com/ethan.phx/" style="--i: 13" target="”_blank”"><i
             class="bx bxl-instagram"></i></a>
-        <a href="https://t.me/samehalpha" style="--i: 14" target="”_blank”"><i class="bx bxl-telegram"></i></a>
-        <a href="https://web.facebook.com/kaisa.only.one/" style="--i: 15" target="”_blank”"><i
+        <a href="https://t.me/samehalpha" style="--i:14" target="”_blank”"><i class="bx bxl-telegram"></i></a>
+        <a href="https://web.facebook.com/kaisa.only.one/" style="--i:15" target="”_blank”"><i
             class="bx bxl-facebook"></i></a>
       </div>
     </div>
