--- a/index.html
+++ b/index.html
@@ -153,11 +153,11 @@
           </div>
         </div>
         <div class="bar">
-          <i class="bx bxl-react" style="color: #69bcbc"></i>
+          <i class='bx bxl-bootstrap' style="color: #911DD4"></i>
           <div class="info">
-            <span>React</span>
+            <span>Bootstrap</span>
           </div>
-          <div class="progress-line react">
+          <div class="progress-line bootstrap">
             <span></span>
           </div>
         </div>
@@ -165,7 +165,7 @@
     </div>
 
     <div class="container1">
-      <h1 class="heading1">Proffesional Skills</h1>
+      <h1 class="heading1">Proffessional Skills</h1>
       <div class="radial-bars">
         <div class="radial-bar">
           <svg x="0px" y="0px" viewBox="0 0 200 200">
@@ -263,7 +263,7 @@
       <p>
         Fast and good quality projects for your company, Hit me with a message and leave the hard work for me.</p>
       <div class="contact-list">
-        <li><i class="bx bxs-send"></i> sameh.av6@gmail.com</li>
+        <li><i class='bx bxl-gmail' ></i> sameh.av6@gmail.com</li>
         <li><i class="bx bxl-whatsapp"></i> (+20) 111 957 5034</li>
       </div>
       <div class="contact-icons">
