--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <nav class="navbar">
       <a href="#home" style="--i:1" class="active">Home</a>
       <a href="#about" style="--i:2">About</a>
-      <a href="#services" style="--i:3">Survices</a>
+      <a href="#services" style="--i:3">Services</a>
       <a href="#skills" style="--i:4">Skills</a>
       <a href="#project" style="--i:5">Projects</a>
       <a href="#contact" style="--i:6">Contact</a>
@@ -54,7 +54,7 @@
         <a href="https://web.facebook.com/kaisa.only.one/" target="”_blank”" style="--i: 11"><i
             class="bx bxl-facebook"></i></a>
       </div>
-      <a href="#" class="btn-box">More About Me</a>
+      <a href="#projects" class="btn-box">More About Me</a>
     </div>
     <span class="home-imgHover"></span>
   </section>
