--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
         <a href="https://web.facebook.com/kaisa.only.one/" target="”_blank”" style="--i: 11"><i
             class="bx bxl-facebook"></i></a>
       </div>
-      <a href="#projects" class="btn-box">More About Me</a>
+      <a href="#project" class="btn-box">More About Me</a>
     </div>
     <span class="home-imgHover"></span>
   </section>
