--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
         producing quality work, producing smooth styling for the website, Have
         done a lot of projects using HTML, CSS, JavaScript.
       </p>
-      <a href="#" class="btn-box">More About Me</a>
+      <a href="#skills" class="btn-box">More About Me</a>
     </div>
   </section>
 
@@ -94,7 +94,7 @@
             <p>
               Editing and creating responsive and animated websites using ( HTML, CSS ).
             </p>
-            <a href="#" class="read">learn more</a>
+            <a href="#project" class="read">learn more</a>
           </div>
           <div>
             <i class="bx bx-crop" style="color: #00eeff"></i>
@@ -102,7 +102,7 @@
             <p>
               Capable of doing forms like (Password Generator - Count Board ) and such other projects using JavaScript.
             </p>
-            <a href="#" class="read">learn more</a>
+            <a href="#project" class="read">learn more</a>
           </div>
           <div>
             <i class="bx bxl-apple" style="color: #00eeff"></i>
@@ -110,7 +110,7 @@
             <p>
               Capable of creating good looking creative websites for who doesn't have specific sketch for their own business, Fixing and editing the style for who wants to make some changes on their old work websites.
             </p>
-            <a href="#" class="read">learn more</a>
+            <a href="#project" class="read">learn more</a>
           </div>
         </div>
       </div>
