--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       <i class='bx bx-menu-alt-right' id="menu-icon"></i>
       <i class='bx bx-x-circle' id="close-icon"></i>
     </label>
-        <!-- ------------------------TOGGLE BUTTON ----------------------------->
+    <!-- ------------------------TOGGLE BUTTON ----------------------------->
     <nav class="navbar">
       <a href="#home" style="--i:1" class="active">Home</a>
       <a href="#about" style="--i:2">About</a>
@@ -94,7 +94,7 @@
             <p>
               Editing and creating responsive and animated websites using ( HTML, CSS ).
             </p>
-            <a href="#project" class="read">learn more</a>
+            <a href="Projects-site/css-file/home.html" target="_blank" class="read">learn more</a>
           </div>
           <div>
             <i class="bx bx-crop" style="color: #00eeff"></i>
@@ -108,7 +108,8 @@
             <i class="bx bxl-apple" style="color: #00eeff"></i>
             <h2>UI/UX Design</h2>
             <p>
-              Capable of creating good looking creative websites for who doesn't have specific sketch for their own business, Fixing and editing the style for who wants to make some changes on their old work websites.
+              Capable of creating good looking creative websites for who doesn't have specific sketch for their own
+              business, Fixing and editing the style for who wants to make some changes on their old work websites.
             </p>
             <a href="#project" class="read">learn more</a>
           </div>
@@ -263,7 +264,7 @@
       <p>
         Fast and good quality projects for your company, Hit me with a message and leave the hard work for me.</p>
       <div class="contact-list">
-        <li><i class='bx bxl-gmail' ></i> sameh.av6@gmail.com</li>
+        <li><i class='bx bxl-gmail'></i> sameh.av6@gmail.com</li>
         <li><i class="bx bxl-whatsapp"></i> (+20) 111 957 5034</li>
       </div>
       <div class="contact-icons">
