--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
         producing quality work, producing smooth styling for the website, Have
         done a lot of projects using HTML, CSS, JavaScript.
       </p>
-      <a href="services" class="btn-box">More About Me</a>
+      <a href="#services" class="btn-box">More About Me</a>
     </div>
   </section>
 
@@ -100,7 +100,7 @@
             <p>
               Editing and creating responsive and animated websites using ( HTML, CSS ).
             </p>
-            <a href="projects-site/home.html" class="read">learn more</a>
+            <a href="Projects-site/css-file/home.html" class="read">learn more</a>
           </div>
           <div>
             <i class="bx bx-crop" style="color: #00eeff"></i>
