--- a/Projects-site/css-file/home.html
+++ b/Projects-site/css-file/home.html
@@ -14,6 +14,10 @@
 </head>
 
 <body>
+    <div class="loader">
+        <div class="ring"></div>
+        <span class="loading">Loading...</span>
+    </div>
 
     <div class="container">
         <div id="slide">
