--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
       <h1>Sameh Ahmed</h1>
       <h3>And I'm a <span class="text"></span></h3>
       <p>
-        I'm a web Designer with experience for over 2 years. <br />expertise
+        I'm a web designer with experience for over 3 years. <br />expertise
         is to create and website design, front-end developer, and many more....
       </p>
       <div class="home-sci">
