--- a/index.html
+++ b/index.html
@@ -306,7 +306,7 @@
 
   <div class="last-text">
     <img src="img/sameh-ahmed-high-resolution-logo-black-.png" alt="" />
-    <p>Developed by <strong>Sameh Ahmed</strong> &copy; 2023</p>
+    <p>Developed by <strong>Sameh Ahmed</strong> &copy; 2023 - 2026</p>
   </div>
 
   <a href="#home" class="top"><i class="bx bx-up-arrow-alt"></i></a>
