--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
             class="bx bxl-instagram"></i></a>
         <a href="https://t.me/samehalpha" target="”_blank”" style="--i: 9"><i class="bx bxl-telegram"></i></a>
         <a href="https://github.com/Samehv9" target="”_blank”" style="--i: 10"><i class="bx bxl-github"></i></a>
-        <a href="https://www.fiverr.com/s/gDpQXEv" target="”_blank”" style="--i: 11"><i
+        <a href="https://web.facebook.com/kaisa.only.one/" target="”_blank”" style="--i: 11"><i
             class="bx bxl-facebook"></i></a>
       </div>
       <a href="#project" class="btn-box">More About Me</a>
@@ -270,7 +270,7 @@
       <p>
         Fast and good quality projects for your company, Hit me with a message and leave the hard work for me.</p>
       <div class="contact-list">
-        <li><i class='bx bxl-gmail'></i> sameh_tech@outlook.com</li>
+        <li><i class='bx bxl-gmail'></i> sameh.av6@gmail.com</li>
         <li><i class="bx bxl-whatsapp"></i> (+20) 111 957 5034</li>
       </div>
       <div class="contact-icons">
@@ -278,7 +278,7 @@
         <a href="https://www.instagram.com/ethan.phx/" style="--i: 13" target="”_blank”"><i
             class="bx bxl-instagram"></i></a>
         <a href="https://t.me/samehalpha" style="--i:14" target="”_blank”"><i class="bx bxl-telegram"></i></a>
-        <a href="https://www.fiverr.com/s/qDXqaBV" style="--i:15" target="”_blank”"><i
+        <a href="https://web.facebook.com/kaisa.only.one/" style="--i:15" target="”_blank”"><i
             class="bx bxl-facebook"></i></a>
       </div>
     </div>
@@ -292,7 +292,7 @@
 
     <textarea name="message" id="message" cols="40" rows="10" placeholder="Enter Your Message" required></textarea>
 
-    <input type="submit" value="Submit" class="send" />
+    <input type="submit" value="Send" class="send" />
   </form>
 
   <p id="form-status"></p>
@@ -316,7 +316,4 @@
   <script src="script.js"></script>
 </body>
 
-
 </html>
-
-
